--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.77.0",
     "antd": "^5.27.6",
+    "axios": "^1.13.1",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "prettier-plugin-organize-imports": "^4.3.0",
