--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "16.0.1",
     "prettier-plugin-organize-imports": "^4.3.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "swr": "^2.3.6",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
